@@ -1,4 +1,4 @@
-name: Metatag: Verification
+name: 'Metatag: Verification'
 type: module
 description: Verifies ownership of a site for search engines and other services.
 # core: 8.x
@@ -6,8 +6,8 @@ package: SEO
 dependencies:
   - metatag
 
-# Information added by Drupal.org packaging script on 2016-05-14
-version: '8.x-1.0-beta8'
+# Information added by Drupal.org packaging script on 2016-06-02
+version: '8.x-1.0-beta9'
 core: '8.x'
 project: 'metatag'
-datestamp: 1463224448
+datestamp: 1464897844
